UIUX-386: fix header element alignments for all header layouts

--- a/sugarcrm/styleguide/less/clients/base/components/record.less
+++ b/sugarcrm/styleguide/less/clients/base/components/record.less
@@ -7,12 +7,20 @@
 
   h1 {
     float: left;
-    margin-top: 2px;
-    margin-left: 20px;
-    line-height: 18px;
+    margin: 18px 0 0 20px;
+    line-height: 24px;
   }
   .view-forecastsTitle h1 {
     margin-top: 12px;
+  }
+
+  .record-edit-link-wrapper {
+    top: 14px;
+    left: -10px;
+    width: 28px;
+    .record-edit-link {
+      margin-left: 0;
+    }
   }
 
   //module type element label
@@ -20,45 +28,53 @@
     width: 32px !important;
     height: 32px !important;
     vertical-align: top;
-    margin-left: 15px !important;
+    margin-left: 1px !important;
+    top: -6px;
+    display: inline-block;
+    position: relative;
   }
 
   //40+1+1=42px=standard height of headerpane elements
   .record-cell {
-    margin-left: 0;
+    padding-left: 12px;
     display: inline-block;
     vertical-align: top;
     position: relative;
+    top: -17px;
+    padding-top: 14px;
+    .record-cell {
+      padding: 13px 0 0;
+    }
   }
   .ellipsis_inline {
-    padding: 21px 2px;
+    padding: 4px 0;
   }
 
   span[data-type="image"] {
-    top: 6px;
+    top: -9px;
+    padding: 0;
     .record-edit-link-wrapper {
-      top: 8px;
-      left: -30px;
+      top: 7px;
+      left: -24px;
     }
     .image_field.image_edit {
       top: -2px;
     }
   }
   span[data-type="fieldset-with-labels"] {
-    margin-left: -10px;
+    margin: 3px 0 0 -10px;
     .record-edit-link-wrapper {
-      top: 15px;
-      width: 28px;
-      .record-edit-link {
-        margin-left: 0;
-      }
+      left: -2px;
+      top: 12px;
     }
     .index2 {
-      margin-left: 20px;
+      margin-left: 6px;
     }
   }
   span[data-type="badge"] {
-    top: 17px;
+    margin-left: 8px;
+    top: -4px;
+    padding: 0;
     .label {
       font-size: 10px;
       padding: 1px 4px 3px;
@@ -68,8 +84,9 @@
     }
   }
   span[data-type="favorite"] {
-    margin-left: 12px;
-    top: 19px;
+    margin-left: 8px;
+    top: 0px;
+    padding: 0;
     [class="icon-favorite"] {
       font-size: 18px !important;
       color: @grayLight;
@@ -79,15 +96,13 @@
     }
   }
 
-  .record-edit-link-wrapper {
-    top: 15px;
-  }
-
   .record-label {
     font-size: 11px;
     font-color: lighten(@gray, 20%);
     line-height: 14px;
     margin: 0 0 0 8px;
+    position: absolute;
+    top: 0;
   }
 
   input[type="text"] {
@@ -97,7 +112,6 @@
 
   .select2-container {
     .select2-choice {
-      margin-top: 0;
       height: 22px;
       padding: 6px 0 2px 8px;
       line-height: 20px;
@@ -114,10 +128,14 @@
     }
   }
 
+  .help-block {
+    margin-bottom: 0;
+  }
+
   //action buttons
 
   .btn-toolbar {
-    margin: 15px 8px 0;
+    margin: 16px 8px 0;
     padding-left: 0;
     .btn-group {
       vertical-align: middle;
@@ -160,7 +178,6 @@
         margin: 0 2px 0 -2px;
     }
   }
-
 }
 
 //main record edit
